added ApiKeyAuth, message server, and updated swager
