# internal/server/http/message/update.go
@@ -1,29 +1,28 @@
-package user
+package message
 
 import (
 	"net/http"
+	"repositorie/internal/entities/message"
+	"repositorie/internal/util"
 
 	"github.com/gin-gonic/gin"
-
-	"repositorie/internal/entities/user"
-	"repositorie/internal/util"
 )
 
 // update godoc
-// @Summary      Updating user fields.
-// @Description  Gets user if everything OK gives back updated user.
-// @Tags         users
+// @Summary      Updating message.
+// @Description  Gets body if everything OK gives back updated message.
+// @Tags         messages
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  auth.Tokens
+// @Success      200  {array} 	message.Message
 // @Failure      400  {object}  entities.Response
 // @Failure      500  {object}  entities.Response
 // @Security 	ApiKeyAuth
-// @Router       /users/update [put]
+// @Router       /message/update [put]
 func (h *Handler) update(c *gin.Context) {
-	logger := log.WithField("user", "update")
+	logger := log.WithField("message", "update")
 
-	var body user.UpdateUserQuery
+	var body message.UpdateMessageQuery
 
 	if err := c.BindJSON(&body); err != nil {
 		util.NewErrorResponse(logger, c.Writer, util.ParseErrorToHTTPErrorCode(err), err.Error())
